--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ dependencies {
 
 	//jackson databind
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+
+	//resilience4j
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'io.github.resilience4j:resilience4j-spring-boot3'
 }
 
 dependencyManagement {
